# leonardo_takehana_embarcatech_HBr_2025

./: README.md
Projetos/ContadorDecrescente/: CMakeLists.txt  ContadorDecrescente.c
Projetos/EstruturacaoCodigoArquiteturaModular/: CMakeLists.txt
Projetos/EstruturacaoCodigoArquiteturaModular/app/: main.c
Projetos/EstruturacaoCodigoArquiteturaModular/drivers/: led_embutido.c
Projetos/EstruturacaoCodigoArquiteturaModular/hal/: hal_led.c
Projetos/EstruturacaoCodigoArquiteturaModular/include/: hal_led.h  led_embutido.h
Projetos/LeituraJoystick/: CMakeLists.txt  LeituraJoystick.c
Projetos/PraticaTesteUnitario/: .gitignore  CMakeLists.txt  README
Projetos/PraticaTesteUnitario/app/: main.c
Projetos/PraticaTesteUnitario/drivers/: temp_sensor.c
Projetos/PraticaTesteUnitario/hal/: hal_temp_sensor.c
Projetos/PraticaTesteUnitario/include/: hal_temp_sensor.h  temp_sensor.h
Projetos/PraticaTesteUnitario/tests/: test_adc_to_celsius.c
Projetos/PraticaTesteUnitario/tests/mocks/hardware/: adc.h
Projetos/PraticaTesteUnitario/tests/mocks/pico/: stdlib.h
Projetos/TemperaturaInternaMCU/: CMakeLists.txt  TemperaturaInternaMCU.c
